Let the steady-state benchmark name an anchor zone
LiveViewSteadyStateBenchmark could only parametrize --anchor-period as
'daily' or a bare duration, so no run could build the shape the checkpoint
anchor planner reads through its zoned branch: ANCHOR DAILY carrying an
IANA zone, which desugars to timestamp_floor_utc rather than
timestamp_floor. The one shape whose repair cost the planner change moves
was the one shape the benchmark could not name.

--anchor-period=daily:<zone> now hangs a zone off the DAILY sugar, as in
--anchor-period=daily:Europe/Berlin, and anchorClause emits the second
literal that reaches timestamp_floor_utc. Only DAILY accepts a zone: the
planner requires ANCHOR DAILY for the zoned shape, so a zone on an ANCHOR
EXPRESSION period would move the view's buckets and still leave the run
measuring an anchor no plan is built from. anchorZoneOffsetMicros resolves
the zone against the shipped tzdata, which fails a misspelled name on the
command line rather than inside CREATE LIVE VIEW.

The account window still slides on a fixed 24-hour grid, now shifted by the
zone's offset at START_TS so it names the instants the DDL's anchor fires
on. The two grids coincide for as long as a run stays inside one DST regime
and drift by the transition's own amount past one - an approximation in
where accounts age out, not in what the view computes or what a repair
plans. The header line reports anchorZone so a run says which it used.

Measured over 800 batches at the reported feed shape (5,500 rows per 5s
flush, 20M-key window, 2% late rows in half the commits), judged from
batch 100: a Europe/Berlin run scans 1,892,000 base rows against 1,892,000
for the same run without the zone, at refresh p50 36.9 ms against 37.0 and
a last-quarter/first-quarter ratio of 0.961 against 0.973. The same run
against a build with the zoned recognition branch disabled scans
29,528,736 rows at p50 143.1 ms, mean 604.4 ms and a ratio of 2.888, and
never arms the open-segment keyed route a